--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ edx.analytics.tasks =
     data_obfuscation   = edx.analytics.tasks.data_obfuscation:ObfuscatedCourseDumpTask
     events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
     obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
+    lms_courseware_link_clicked = edx.analytics.tasks.lms_courseware_link_clicked:LMSCoursewareLinkClickedTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
