--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ edx.analytics.tasks =
     events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
     obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
     lms_courseware_link_clicked = edx.analytics.tasks.lms_courseware_link_clicked:LMSCoursewareLinkClickedTask
+    push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
+
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
