--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ console_scripts =
 
 edx.analytics.tasks =
     event-type-dist = edx.analytics.tasks.event_type_dist:PushToVerticaEventTypeDistributionTask
+    fetch-transcriptions = edx.analytics.tasks.fetch_transcriptions:FetchVideoTranscriptionsTask
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
     total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
     inc-enrollments-report = edx.analytics.tasks.reports.incremental_enrollments:WeeklyIncrementalUsersAndEnrollments
